# new_project

./: .env  pyproject.toml
new_project/: pipl.py  test
